made quick change for testing

--- a/Independent/AAPL Analysis/AAPL Stock+Reddit Analysis.ipynb
+++ b/Independent/AAPL Analysis/AAPL Stock+Reddit Analysis.ipynb
@@ -67,7 +67,7 @@
    "metadata": {},
    "source": [
     "#### All good.\n",
-    "##### A quick check of posts in nsfw subreddits tells us that the popularity of such posts is low (not exceeding a score of 11). For this reason, and that nsfw subreddits are unlikely to contain serious discussion of the $AAPL ticker, they are dropped."
+    "##### A quick check of posts in nsfw subreddits tells us that the popularity of such posts is low (not exceeding a score of 11). For this reason, and that nsfw subreddits are unlikely to contain serious discussion of the AAPL ticker, they are dropped."
    ]
   },
   {
