moving over to windows

--- a/Independent/AAPL Analysis/AAPL Stock+Reddit Analysis.ipynb
+++ b/Independent/AAPL Analysis/AAPL Stock+Reddit Analysis.ipynb
@@ -2195,6 +2195,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "66e35c08",
+   "metadata": {},
+   "source": [
+    "[Placeholder]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 59,
    "id": "01fa7e55",
@@ -2643,16 +2651,18 @@
     }
    ],
    "source": [
-    "sentiment_clean_monthly = (sentiment_clean\n",
-    "                               .groupby(['year_created', 'month_created'])\n",
-    "                               .mean()\n",
-    "                               .reset_index()\n",
-    "                               )\n",
-    "sentiment_wsb_monthly = (sentiment_wsb\n",
-    "                               .groupby(['year_created', 'month_created'])\n",
-    "                               .mean()\n",
-    "                               .reset_index()\n",
-    "                               )\n",
+    "sentiment_clean_monthly = (\n",
+    "    sentiment_clean\n",
+    "    .groupby(['year_created', 'month_created'])\n",
+    "    .mean()\n",
+    "    .reset_index()\n",
+    "    )\n",
+    "sentiment_wsb_monthly = (\n",
+    "    sentiment_wsb\n",
+    "    .groupby(['year_created', 'month_created'])\n",
+    "    .mean()\n",
+    "    .reset_index()\n",
+    "    )\n",
     "sentiment_clean_monthly.head()"
    ]
   },
